{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ccd7bf0f-981c-4aef-a41c-15f2ccc6a2e4",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "2ca1db16-9f5c-4e05-a9c0-33d14a048fcc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Button",
                    "id": "f9517cc7-97a8-4c3e-8c26-e94f71af7b8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftJoystick",
                    "type": "Value",
                    "id": "d62e357c-0392-437d-8f06-bf90c9fb18f6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightJoystick",
                    "type": "Value",
                    "id": "f97f435e-ff33-41be-9fd4-0c2d5cdfb665",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchDimension",
                    "type": "Button",
                    "id": "0467286e-67ab-43ba-90f3-6c8bb7a1def0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "a3575d87-75fd-457e-961a-721d321a5664",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "3cc7f6dd-70f8-4b9a-a99a-38244dd11299",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84a9d580-a2aa-4abe-9a31-e93ab9891949",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99d6ea14-085c-43b6-b083-8e877703da7b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "293699b3-3717-4b36-8b1d-0afb8ab74555",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a0a8f67-8d20-46b7-b25a-7c5b6bc3b7d0",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "rb+lb",
                    "id": "cdb488af-c6ca-4adc-9945-08b80cdeded3",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDimension",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2c443af1-b9e0-4f8c-905e-4a877b520004",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDimension",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "3ad95d1d-68c5-46ed-b913-5c726f89afdc",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDimension",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "lb+rb",
                    "id": "45714883-f760-4a57-884f-4b78369939a6",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDimension",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "899df481-b1e0-4fad-a97f-2ef30e09aa9d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDimension",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "948f7a02-d9ce-47da-9ba1-f757c2b27edb",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchDimension",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "61e80ae9-9ab4-49a9-8430-ef4dbf67327f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7e35b59-ff98-48d8-b179-a8b85df66c39",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3dac08a-b255-45f7-86b5-42daab258a75",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}